# jobs-service

./: .gitmodules  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py  schemas.py  settings.py  storage.py
app/domain/: job.py  job_alert.py
app/repository/: alert_repository.py  repository.py
app/services/: external_job_finder_service.py  job_alert.py  job_finder_aggregator.py  notify_service.py
docker/: Dockerfile
tests/: test_route.py  test_storage.py
tests/external_services/: test_external_job_finder_service.py  test_job_alert.py
tests/repositories/: repository.py  test_alert_job_repository.py  test_repository.py
